Fixed review name under style selector in style 1 (z-index)

--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,7 @@ button {
 }
 
 #reviewName {
+  position:relative; /* NEEDED FOR Z-INDEX TO WORK! */
   transition: .3s;  /* When it shrinks on scroll*/
 }
 
